# morpology_of_five_regular_edge_uncolorable_graphs

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  NOTES_gadget_search.md  README.MD  README.md  RP-Report-LS.md  docker-compose.yaml  requirements.txt
data/: README.md  (+3 more)
python/: .gitignore  README.md  checkpoint_5reg_10v_20260604_163829.json  checkpoint_5reg_4v.json  checkpoint_5reg_6v.json  checkpoint_5reg_8v.json  checkpoint_5reg_8v_20260604_153954.json  checkpoint_5reg_8v_20260604_162238.json  checkpoint_5reg_8v_20260604_162357.json  checkpoint_5reg_8v_20260604_163313.json  filter_all_uncol.sh  generate_gadget.md  pyproject.toml  results_5reg_10v_20260604_163829.txt  results_5reg_4v.txt  results_5reg_6v.txt  results_5reg_8v.txt  results_5reg_8v_20260604_153954.txt  results_5reg_8v_20260604_162238.txt  results_5reg_8v_20260604_163313.txt
python/benchmark/: README.MD  README.md  bench_all_edge.sh  benchmark.py  benchmark_edge_colorability.py  res_i5.txt  results.txt
python/functions/: is_colorable.py
python/functions_d/: add_edge.py  double_cycle.py  draw_multigraph.py  g_from_file.py  is_colorable.py  k5_substitution.py  split_by_cut_f.py
python/morphology_graphs/: __init__.py
python/morphology_graphs/cli/: chcol.py  check_overfull.py  filter_by_colorable_cut.py  filter_low_con.py  filter_uncol.py  gadget_categorize.py  gadget_search.py  (+2 more)
python/scripts/: __init__.py  add_matching.py  add_random_matching.py  another_graph.py  chcol.py  check_overfull.py  filter_by_colorable_cut.py  filter_k5.py  filter_low_con.py  filter_uncol.py  generate_all_5reg.py  generate_overful.py  some_graph.py  some_graph2.py  test_add_edge.py  test_col_multi.py  test_gen.py  test_k5_subst.py
python/tests/: test_core.py  test_gadget.py
(+31 files in other folders)
