[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morphology-five-regular-graphs"
version = "0.1.0"
description = "Tools for studying 5-regular edge-uncolorable graphs."
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "networkx",
    "numpy",
    "ortools",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
chcol = "morphology_graphs.cli.chcol:main"
check-overfull = "morphology_graphs.cli.check_overfull:main"
filter-by-colorable-cut = "morphology_graphs.cli.filter_by_colorable_cut:main"
filter-low-con = "morphology_graphs.cli.filter_low_con:main"
filter-uncol = "morphology_graphs.cli.filter_uncol:main"
generate-overful = "morphology_graphs.cli.generate_overful:main"
gadget-search = "morphology_graphs.cli.gadget_search:main"

[tool.setuptools.packages.find]
include = ["morphology_graphs*"]
